fixed "jumpy" fixed bacground on ie [+] detailed all ref: https://coderwall.com/p/hlqqia/ie-fix-for-jumpy-fixed-bacground

--- a/scss/component/_form.scss
+++ b/scss/component/_form.scss
@@ -225,6 +225,8 @@ p.text-resultDate {
         width: 65%;
     }
     input.form-control {
+        font-family: 'kanda_b';
+        font-size: 24px;
         display: inline-block;
         width: 100%;
         margin-left: -4px;
