--- a/scss/layout/_step4.scss
+++ b/scss/layout/_step4.scss
@@ -162,3 +162,9 @@
         }
     }
 }
+
+.redeemCode{
+    input{
+        text-align: center;
+    }
+}
